# OTUS_2

./: CMakeLists.txt  OTUS.sln  README.md  homework_2.vcxproj  main.cpp
.github/workflows/: release_ubuntu.yml
